--- a/EX11.md
+++ b/EX11.md
@@ -1,8 +1,8 @@
-# EX 11: Oracle Database Connection with Python
-## Date: 
-## AIM:
+## EX 11: Oracle Database Connection with Python
+### Date: 
+### AIM:
 To connect Oracle database with Python using cx_Oracle module.
-## PROCEDURE:
+### PROCEDURE:
 1. Install cx-Oracle : With the command **pip install cx-Oracle**
 2. To Connect **connect():**
    Now Establish a connection between the Python program and Oracle database by using connect() function. 
@@ -28,7 +28,7 @@ fetchall() : This method is used to fetch all rows from the result set.
 cursor.close()
 con.close()
 ```
-## PROGRAM:
+### PROGRAM:
 ```python
 # importing module
 import cx_Oracle
@@ -53,10 +53,10 @@ finally:
 	if con:
 		con.close()
 ```
-## OUTPUT:
+### OUTPUT:
 ![image](https://github.com/dineshgl/EX-11-Oracle-Database-Connection-with-Python/assets/143793356/2bcf1487-985e-4933-bef0-9751295f0b28)
 
-## PROGRAM:
+### PROGRAM:
 ```python
 import cx_Oracle
 # Load data from a csv file into Oracle table using executemany
@@ -86,10 +86,10 @@ finally:
 	if con:
 		con.close()
 ```
-## OUTPUT
+### OUTPUT
 ![image](https://github.com/dineshgl/EX-11-Oracle-Database-Connection-with-Python/assets/143793356/b9e771d7-d8b8-4057-ab58-ae1dcc942b1d)
 
-## PROGRAM:
+### PROGRAM:
 ```python
 import cx_Oracle
 try:
@@ -113,8 +113,8 @@ finally:
 	if con:
 		con.close()
 ```
-## OUTPUT:
+### OUTPUT:
 ![image](https://github.com/dineshgl/EX-11-Oracle-Database-Connection-with-Python/assets/143793356/fd028efc-1a80-4c84-a398-5c372bfec6dd)
 
-## RESULT:
+### RESULT:
 Thus the program for dababase connectivity with python has been executed successfully.
